<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp.SignUpActivity">
    <TextView
        android:id="@+id/tvWelcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen12"
        android:layout_marginTop="@dimen/dimen180"
        android:text="@string/welcome_title"
        android:textColor="@color/blue"
        android:textSize="@dimen/dimen18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvDes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="155dp" />

    <TextView
        android:id="@+id/tvDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen12"
        android:text="@string/des_title"
        app:layout_constraintBottom_toTopOf="@id/tfUserName"
        app:layout_constraintStart_toStartOf="@id/tvWelcom"
        app:layout_constraintTop_toBottomOf="@id/tvWelcom"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="192dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfUserName"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDes"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="277dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen12"
            android:hint="@string/input_username_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfPassword"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfUserName"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="373dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen12"
            android:hint="@string/input_password_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfRePassword"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfPassword"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="373dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen12"
            android:hint="@string/re_input_password_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbRemeberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_remember_me_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
        app:layout_constraintStart_toStartOf="@id/tvWelcom"
        app:layout_constraintTop_toBottomOf="@id/tfRePassword" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/conner_green_button"
        android:text="@string/btn_sign_in"
        android:textColor="@color/white"
        android:layout_marginHorizontal="@dimen/dimen12"
        app:layout_constraintTop_toBottomOf="@id/cbRemeberMe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="464dp" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen12"
        android:layout_height="wrap_content"
        android:background="@drawable/conner_red_button"
        android:text="@string/btn_back"
        android:layout_marginEnd="@dimen/dimen12"
        android:layout_marginTop="@dimen/dimen12"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        app:layout_constraintStart_toStartOf="@id/btnSignIn"
        app:layout_constraintEnd_toEndOf="@id/btnSignIn"
        android:onClick="onBackTap"/>

</androidx.constraintlayout.widget.ConstraintLayout>